📘 [Templates] auth 기능 edit

--- a/Simple_web/flaskr/templates/auth/login.html
+++ b/Simple_web/flaskr/templates/auth/login.html
@@ -13,21 +13,25 @@
         <div class="row mt-5">
             <h1>로그인</h1>
         </div>
-
+        <!-- flash 에러 메시지에 대한 내용-->
+        {%with messages = get_flashed_messages()%}
+        {%if messages %}
+          <script type="text/javascript">
+            alert("{{messages[-1]}}");
+          </script>
+        {%endif%}
+        {%endwith%}
         <div class="col-12">
             <br><br>
             <form method="POST">
                 {{form.csrf_token}}
                 <div class="form-group">
-                    {{form.userid.label("아이디")}}
-                    {{form.userid(class="form-control", placeholder="아이디")}}
+                    {{form.username.label("아이디")}}
+                    {{form.username(class="form-control", placeholder="아이디")}}
                 </div>
                 <div class="form-group">
-                    {{form.password.label("비밀번호")}}
-                    {%if form.password.errors%} <!--로그인이 실패하면-->
-                    {{form.password.errors.0}} <!--첫번째 에러메시지 출력한다-->
-                    {%endif%} <!--실패하지 않았으면 비밀번호 넘긴다-->
-                    {{form.password(class="form-control", placeholder="비밀번호")}}
+                    {{form.passwd.label("비밀번호")}}
+                    {{form.passwd(class="form-control", placeholder="비밀번호")}}
                 </div>
                 <button type="submit" class="btn btn-primary">제출</button>
             </form>
