--- a/Simple_web/flaskr/templates/auth/register.html
+++ b/Simple_web/flaskr/templates/auth/register.html
@@ -14,16 +14,26 @@
             <h1>회원가입</h1>
         </div>
 
+        <!-- flash 에러 메시지에 대한 내용-->
+        {%with messages = get_flashed_messages()%}
+        {%if messages %}
+          <script type="text/javascript">
+            alert("{{messages[-1]}}");
+          </script>
+        {%endif%}
+        {%endwith%}
+
         <div class="col-12">
             <br><br>
-            <form method="POST" action=".">
+            <form method="POST" action="./register">
+                {{form.csrf_token}} <!--csft활성화-->
                 <div class="form-group">
-                    <label for="userid">이름</label>
-                    <input type="text" class="form-control" id="username" placeholder="아이디" name="username"/>
+                    {{form.username.label("유저 이름")}}
+                    {{form.username(class="form-control", placeholder="유저 이름")}}
                 </div>
                 <div class="form-group">
-                    <labelfor="password">비밀번호</label>
-                    <input type="password" class="form-control" id="passwd" placeholder="비밀번호" name="passwd"/>
+                    {{form.passwd.label("유저 이름")}}
+                    {{form.passwd(class="form-control", placeholder="비밀번호")}}
                 </div>
                 <button type="submit" class="btn btn-primary">제출</button>
             </form>
